--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/cryptojs": "^3.1.29",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
